# AudioAndVideo

./: .gitignore  README.md
AudioAdvance/: README.md
AudioBasic/: README.md  audio_basic.md
NoiseSuppression/: CMakeLists.txt  README.md  bootstrap.py  build.py
NoiseSuppression/cmake/ios/: ios.toolchain.cmake
NoiseSuppression/cmake/msvc/: msvc.toolchain.cmake
NoiseSuppression/sdk/android/com/seewo/ns/: NoiseSuppression.java
NoiseSuppression/sdk/cocoa/: CMakeLists.txt
NoiseSuppression/sdk/cocoa/src/: SWNoiseSuppression.h  SWNoiseSuppression.mm
NoiseSuppression/sdk/src/: CMakeLists.txt  noise_suppression.c  noise_suppression.h
NoiseSuppression/sdk/src/Commons/inc/: Version.h  Version.h.in
NoiseSuppression/sdk/src/jni/: JNIConverter.cc  JNIConverter.h  JNINoiseSuppression.cc  JNINoiseSuppression.h
VideoAdvance/: README.md
VideoBasic/: README.md
